  o Bug in IRT models/Training/Dichotomous models text of theta in
    plotly was fixed.
  o Bug in IRT models/Training in plotly a ModeBar was fixed.

MAJOR UPDATES
  o Data upload now allows also ordinal data, min/max values can be
    specified.
  o Validity/Correlation structure now allows selection between
    Pearson/Spearman/Polychoric correlation, Polychoric is default
    for binary data
  o Download of tables (as .csv files) is now provided for
    standard scores, correlation matrix, traditional item analysis,
    and for parameter estimates in IRT models.

MINOR UPDATES
  o Data upload now better points to "Upload data" button.
  o Precision was re-set for IRT models/Training tab. Now = 0.1.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.8-2. (2018-11-05) -
-------------------------------------------------------

MAJOR UPDATES
  o gDiscrim() function has been extended to calculate Upper-Lower
    Index (ULI) also for ordinal items

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.8-1. (2018-10-01) -
-------------------------------------------------------

BUG FIXING
  o Bug in IRT dichotomous models comparison is fixed.
    (Reported by Jean-Luc Kop)
  o Bug in IRT dichotomous models (3PL and 4PL) was fixed.
    Tables of parameters are rendered even in case that EM cycles
    terminated without convergence. In such a case SD of parameters
    are set to NA.
  o Bug in plotDIFLogistic() function was fixed. Function now returns
    also item.name argument.
  o Bug in plotDIFirt() function was fixed. Function now returns also
    item.name argument.

MAJOR UPDATES
  o Global setting for figure downloads was created. This can be changed
    in Setting section.

-------------------------------------------------------
- Changes in ShinyItemAnalysis 1.2.8 (2018-09-27) -
-------------------------------------------------------
