@@ -85,6 +85,7 @@ importFrom(shinyjs,useShinyjs)
 importFrom(stats,aggregate)
 importFrom(stats,coef)
 importFrom(stats,complete.cases)
+importFrom(stats,cor)
 importFrom(stats,deriv)
 importFrom(stats,deriv3)
 importFrom(stats,fitted)
@@ -99,4 +100,5 @@ importFrom(stats,vcov)
 importFrom(stats,xtabs)
 importFrom(stringr,str_sub)
 importFrom(utils,data)
+importFrom(utils,head)
 importFrom(utils,read.csv)
